# reviewguru-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  registry-publish.sh  requirements.txt  server.json  server.py  smithery.yaml
.github/workflows/: release.yml
