[project]
name = "reviewguru-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Review Guru — query Sri Lankan businesses, doctors, and reviews from any MCP-aware AI agent."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Review Guru", email = "hello@reviewguru.lk" },
]
keywords = ["mcp", "model-context-protocol", "reviews", "sri-lanka", "claude", "ai", "llm-tool"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.1.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://reviewguru.lk"
"Public API" = "https://reviewguru.lk/api/v1"
"Source" = "https://github.com/kapruka/reviewguru-mcp"
"Issues" = "https://github.com/kapruka/reviewguru-mcp/issues"

[project.scripts]
reviewguru-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[tool.hatch.build.targets.sdist]
only-include = ["server.py", "README.md", "LICENSE", "pyproject.toml"]
